--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset=UTF-8 />
     <meta name='viewport content=width=device-width, initial-scale=1.0' />
     <script src=./src/js/script.js defer></script>
-    <title>Contador</title>
+    <link rel="stylesheet" href="./src/css/style.css">
+    <title>Counter</title>
   </head>
   <body id="main">
-    <h1>Contador</h1>
+    
   </body>
 </html>
 
